--- a/src/napari_kld/napari.yaml
+++ b/src/napari_kld/napari.yaml
@@ -1,8 +1,8 @@
 name: napari-kld
 display_name: Kernel Learning Deconvolution
 # use 'hidden' to remove plugin from napari hub search results
-# visibility: public
-visibility: hidden
+visibility: public
+# visibility: hidden
 # see https://napari.org/stable/plugins/manifest.html for valid categories
 categories: ["Image Processing"]
 contributions:
