--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,9 +32,9 @@ dependencies = [
     "torch==2.0",
     "torchvision",
     "fft-conv-pytorch",
-    "pytorch_msssim"
-    "tensorboard"
-    "pydicom"
+    "pytorch_msssim",
+    "tensorboard",
+    "pydicom",
 ]
 
 [project.optional-dependencies]
